#22 fix codestyle, extension info

--- a/Extension/ASD.ESH/Assets/ReleaseNotes.txt
+++ b/Extension/ASD.ESH/Assets/ReleaseNotes.txt
@@ -1,4 +1,7 @@
 ﻿- v 1.2 build **** rev. *****
+Fixed: for update of VS2019 16.5, thanks 'flaengel' (Flavio Engel), 'sharwell' (Sam Harwell)
+
+- v 1.2 build 6711 rev. 40790
 Fixed: Visual Studio 2017 version 15.7 no longer works, thanks 'Spaier' (Pavel Levchuk)
 
 - v 1.2 build 6554 rev. 24807
